# typp

./: .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  INSTALL  Makefile.am  README  README.md  configure.ac  contributors.md
man/: Makefile.am  typp.6
src/: Makefile.am  common.c  connection.c  main.c  main.h  remote_results.c  server.c
src/server/: README  launch.sh  server.c  sort-values.sh
texts/: Makefile.am  eng.typp  rus.typp
